index: Extract `stats-label` CSS module class

--- a/app/styles/index.module.scss
+++ b/app/styles/index.module.scss
@@ -61,6 +61,10 @@
     }
 }
 
+.stats-label {
+    composes: small from './shared/typography.module.scss';
+}
+
 .lists {
     display: flex;
     flex-wrap: wrap;
