--- a/app/styles/crates.module.scss
+++ b/app/styles/crates.module.scss
@@ -29,3 +29,18 @@
         select { display: block; }
     }
 }
+
+.list {
+    background-color: white;
+    padding: 0 20px;
+    margin-bottom: 20px;
+}
+
+.row {
+    border-bottom: 2px solid $gray-border;
+    padding: 20px 0;
+
+    &:last-of-type {
+        border: none;
+    }
+}
