--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -37,15 +37,13 @@
   </div>
 </div>
 
-<div class='white-rows'>
+<div local-class="list">
   {{#each this.model as |keyword|}}
-    <div class='row'>
-      <div class='info'>
-        <LinkTo @route="keyword" @model={{keyword}}>{{keyword.id}}</LinkTo>
-        <span class='small'>
-          {{ pluralize (format-num keyword.crates_cnt) "crate" }}
-        </span>
-      </div>
+    <div local-class="row">
+      <LinkTo @route="keyword" @model={{keyword}}>{{keyword.id}}</LinkTo>
+      <span local-class="crate-count">
+        {{ pluralize (format-num keyword.crates_cnt) "crate" }}
+      </span>
     </div>
   {{/each}}
 </div>
