--- a/app/styles/search.module.scss
+++ b/app/styles/search.module.scss
@@ -2,6 +2,16 @@
     margin: 0 15px;
 }
 
+.list {
+    background-color: white;
+    padding: 0 20px;
+    margin-bottom: 20px;
+}
+
+.row {
+    padding: 20px 0;
+}
+
 .exact-match {
     margin-bottom: 40px;
     border-bottom: solid beige;
