--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -63,18 +63,18 @@
     </div>
   </div>
 
-  <div class='white-rows'>
+  <div local-class="list">
     {{#each this.model as |crate index|}}
       {{#if crate.exact_match}}
         <div local-class="exact-match">
           <LinkTo @route="crate" @model={{crate}}>
             <h1>Exact Match</h1>
           </LinkTo>
-          <CrateRow @crate={{crate}} class="row" data-test-crate-row={{index}} />
+          <CrateRow @crate={{crate}} local-class="row" data-test-crate-row={{index}} />
         </div>
       {{else}}
         <div>
-          <CrateRow @crate={{crate}} class="row" data-test-crate-row={{index}} />
+          <CrateRow @crate={{crate}} local-class="row" data-test-crate-row={{index}} />
         </div>
       {{/if}}
     {{/each}}
