--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -58,9 +58,9 @@
       </div>
     </div>
 
-    <div class='white-rows'>
+    <div local-class="list">
       {{#each this.model.crates as |crate|}}
-        <CrateRow @crate={{crate}} class="row" />
+        <CrateRow @crate={{crate}} local-class="row" />
       {{/each}}
     </div>
 
