--- a/app/styles/category/index.module.scss
+++ b/app/styles/category/index.module.scss
@@ -21,3 +21,18 @@
 .category-description {
     margin-top: 6px;
 }
+
+.list {
+    background-color: white;
+    padding: 0 20px;
+    margin-bottom: 20px;
+}
+
+.row {
+    padding: 20px 0;
+    border-bottom: 2px solid $gray-border;
+
+    &:last-of-type {
+        border: none;
+    }
+}
