--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -81,9 +81,9 @@
   </div>
 </div>
 
-<div class='white-rows'>
+<div local-class="list">
   {{#each this.model as |crate|}}
-    <CrateRow @crate={{crate}} class="row" />
+    <CrateRow @crate={{crate}} local-class="row" />
   {{/each}}
 </div>
 
