--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -53,9 +53,9 @@
   </div>
 </div>
 
-<div class='white-rows'>
+<div local-class="list">
   {{#each this.model as |crate|}}
-    <CrateRow @crate={{crate}} class="row" />
+    <CrateRow @crate={{crate}} local-class="row" />
   {{/each}}
 </div>
 
