--- a/app/templates/me/following.hbs
+++ b/app/templates/me/following.hbs
@@ -13,7 +13,7 @@
   />
 
   <div>
-    <span class='small'>Sort by</span>
+    <span local-class="sort-by-label">Sort by</span>
     <SortDropdown @current={{this.currentSortBy}} as |sd|>
       <sd.Option @query={{hash sort="alpha"}}>Alphabetical</sd.Option>
       <sd.Option @query={{hash sort="downloads"}}>All-Time Downloads</sd.Option>
