--- a/app/styles/categories.module.scss
+++ b/app/styles/categories.module.scss
@@ -1,5 +1,9 @@
 /* Styles for the /categories page */
 
+.sort-by-label {
+    composes: small from './shared/typography.module.scss';
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
