--- a/app/styles/category/index.module.scss
+++ b/app/styles/category/index.module.scss
@@ -22,6 +22,10 @@
     margin-top: 6px;
 }
 
+.sort-by-label {
+    composes: small from '../shared/typography.module.scss';
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
