--- a/app/styles/crates.module.scss
+++ b/app/styles/crates.module.scss
@@ -30,6 +30,10 @@
     }
 }
 
+.sort-by-label {
+    composes: small from './shared/typography.module.scss';
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
