--- a/app/styles/search.module.scss
+++ b/app/styles/search.module.scss
@@ -2,6 +2,10 @@
     margin: 0 15px;
 }
 
+.sort-by-label {
+    composes: small from './shared/typography.module.scss';
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
