--- a/app/styles/team.module.scss
+++ b/app/styles/team.module.scss
@@ -1,3 +1,7 @@
+.sort-by-label {
+    composes: small from './shared/typography.module.scss';
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
