--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -43,7 +43,7 @@
   />
 
   <div data-test-category-sort>
-    <span class='small'>Sort by</span>
+    <span local-class="sort-by-label">Sort by</span>
     <SortDropdown @current={{this.currentSortBy}} as |sd|>
       <sd.Option @query={{hash sort="alpha"}}>Alphabetical</sd.Option>
       <sd.Option @query={{hash sort="downloads"}}>All-Time Downloads</sd.Option>
