--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -34,7 +34,7 @@
   />
 
   <div data-test-crates-sort>
-    <span class='small'>Sort by</span>
+    <span local-class="sort-by-label">Sort by</span>
     <SortDropdown @current={{this.currentSortBy}} as |sd|>
       <sd.Option @query={{hash page=1 sort="alpha"}}>Alphabetical</sd.Option>
       <sd.Option @query={{hash page=1 sort="downloads"}}>All-Time Downloads</sd.Option>
