--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -1,12 +1,12 @@
 {{ title this.category.category ' - Categories' }}
 
-<div class="crates-heading">
+<PageHeader local-class="header">
   <LinkTo @route="categories" aria-label="Categories">{{svg-jar "crate"}}</LinkTo>
   <h1>
     {{#each this.category.parent_categories as |parent|}}<LinkTo @route="category" @model={{parent.slug}}>{{parent.category}}</LinkTo>::{{/each}}
     {{~ this.category.category }}
   </h1>
-</div>
+</PageHeader>
 
 <div>
   <p>{{ this.category.description }}</p>
