--- a/app/templates/data-access.hbs
+++ b/app/templates/data-access.hbs
@@ -1,7 +1,4 @@
-<div class="crates-heading">
-  {{svg-jar 'circle-with-i'}}
-  <h1>Accessing the Crates.io Data</h1>
-</div>
+<PageHeader @title="Accessing the Crates.io Data" @icon="circle-with-i"/>
 
 <p>
   There are several ways of accessing the Crates.io data. You should try the
