--- a/app/templates/install.hbs
+++ b/app/templates/install.hbs
@@ -1,7 +1,4 @@
-<div class="crates-heading">
-  {{svg-jar "download"}}
-  <h1>Install Cargo</h1>
-</div>
+<PageHeader @title="Install Cargo" @icon="download"/>
 
 <p>
   Redirecting you to <code>https://doc.rust-lang.org/cargo/getting-started/installation.html</code>&#8230;
