--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -1,9 +1,6 @@
 {{ title 'Keywords' }}
 
-<div class="crates-heading">
-  {{svg-jar "crate"}}
-  <h1>All Keywords</h1>
-</div>
+<PageHeader @title="All Keywords"/>
 
 <div local-class="results-meta">
   <ResultsCount
