--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -1,9 +1,6 @@
 {{ title 'My Crates' }}
 
-<div class="crates-heading">
-  {{svg-jar "crate"}}
-  <h1>My Crates</h1>
-</div>
+<PageHeader @title="My Crates"/>
 
 {{! TODO: reduce duplication with templates/crates.hbs }}
 
