--- a/app/templates/me/following.hbs
+++ b/app/templates/me/following.hbs
@@ -1,7 +1,4 @@
-<div class="crates-heading">
-  {{svg-jar "crate"}}
-  <h1>My Crates</h1>
-</div>
+<PageHeader @title="Followed Crates"/>
 
 {{! TODO: reduce duplication with templates/me/crates.hbs }}
 
