--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -1,9 +1,6 @@
 {{ title 'Settings' }}
 
-<div class="crates-heading">
-  {{svg-jar "gear"}}
-  <h1>Account Settings</h1>
-</div>
+<PageHeader @title="Account Settings" @icon="gear"/>
 
 <div local-class='me-profile'>
   <h2>Profile Information</h2>
