--- a/app/templates/policies.hbs
+++ b/app/templates/policies.hbs
@@ -1,7 +1,4 @@
-<div class="crates-heading">
-  {{svg-jar 'circle-with-i'}}
-  <h1>Crates.io Package Policies</h1>
-</div>
+<PageHeader @title="Crates.io Package Policies" @icon="circle-with-i"/>
 
 <p>
   In general, these policies are guidelines. Problems are often contextual, and
