--- a/app/styles/category/index.module.scss
+++ b/app/styles/category/index.module.scss
@@ -1,3 +1,12 @@
+.header {
+    display: flex;
+    align-items: center;
+
+    h1 {
+        padding: 0 10px;
+    }
+}
+
 .subcategories {
     background-color: white;
     padding: 0 20px;
