--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -1,9 +1,6 @@
 {{ title 'Categories' }}
 
-<div class="crates-heading">
-  {{svg-jar "crate"}}
-  <h1>All Categories</h1>
-</div>
+<PageHeader @title="All Categories"/>
 
 <div local-class="results-meta">
   <ResultsCount
