--- a/app/templates/category-slugs.hbs
+++ b/app/templates/category-slugs.hbs
@@ -1,9 +1,6 @@
 {{ title 'Category Slugs' }}
 
-<div class="crates-heading">
-  {{svg-jar "crate"}}
-  <h1>All Valid Category Slugs</h1>
-</div>
+<PageHeader @title="All Valid Category Slugs"/>
 
 <dl local-class="list">
   {{#each this.model as |category|}}
