--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,8 +6,7 @@
 <div local-class="application">
   <nav local-class="header">
     <LinkTo @route="index" @tabindex="-1">
-      <img src="/assets/Cargo-Logo-Small.png" id="logo"
-           height="100" width="100" alt="Cargo Logo">
+      <img src="/assets/Cargo-Logo-Small.png" height="100" width="100" alt="Cargo Logo">
     </LinkTo>
     <LinkTo @route="index">
       <h1>
