--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -36,27 +36,27 @@
 </div>
 
 <div local-class='lists'>
-  <section id='new-crates' data-test-new-crates aria-busy="{{this.dataTask.isRunning}}">
+  <section data-test-new-crates aria-busy="{{this.dataTask.isRunning}}">
     <h2>New Crates</h2>
     <CrateListNewest @crates={{this.model.new_crates}} />
   </section>
-  <section id='most-downloaded' data-test-most-downloaded aria-busy="{{this.dataTask.isRunning}}">
+  <section data-test-most-downloaded aria-busy="{{this.dataTask.isRunning}}">
     <h2>Most Downloaded</h2>
     <CrateListNameOnly @crates={{this.model.most_downloaded}} />
   </section>
-  <section id='just-updated' data-test-just-updated aria-busy="{{this.dataTask.isRunning}}">
+  <section data-test-just-updated aria-busy="{{this.dataTask.isRunning}}">
     <h2>Just Updated</h2>
     <CrateListNewest @crates={{this.model.just_updated}} />
   </section>
-  <section id='most-recently-downloaded' data-test-most-recently-downloaded aria-busy="{{this.dataTask.isRunning}}">
+  <section data-test-most-recently-downloaded aria-busy="{{this.dataTask.isRunning}}">
     <h2>Most Recent Downloads</h2>
     <CrateListNameOnly @crates={{this.model.most_recently_downloaded}} />
   </section>
-  <section id='keywords' data-test-keywords aria-busy="{{this.dataTask.isRunning}}">
+  <section data-test-keywords aria-busy="{{this.dataTask.isRunning}}">
     <h2>Popular Keywords <LinkTo @route="keywords">(see all)</LinkTo></h2>
     <KeywordList @keywords={{this.model.popular_keywords}} />
   </section>
-  <section id='categories' data-test-categories aria-busy="{{this.dataTask.isRunning}}">
+  <section data-test-categories aria-busy="{{this.dataTask.isRunning}}">
     <h2>Popular Categories <LinkTo @route="categories">(see all)</LinkTo></h2>
     <CategoryList @categories={{this.model.popular_categories}} />
   </section>
