category.index: Remove unused `id` assignment
There are no styles assigned to this ID and it seems unlikely to be used in a bookmark

--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -13,7 +13,7 @@
 </div>
 
 {{#if this.category.subcategories }}
-  <div id='subcategories'>
+  <div>
     <h2>Subcategories</h2>
     <div local-class="subcategories">
       {{#each this.category.subcategories as |subcategory| }}
