--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -5,7 +5,7 @@
   <h1>All Categories</h1>
 </div>
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
