--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -34,7 +34,7 @@
 {{/if}}
 
 <h2>Crates</h2>
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
