--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -25,7 +25,7 @@
   </select>
 </div>
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
