--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -6,7 +6,7 @@
   <h2>for keyword '{{ this.keyword.keyword }}'</h2>
 </div>
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
