--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -7,7 +7,7 @@
 
 {{! TODO: reduce duplication with templates/crates.hbs }}
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
