--- a/app/templates/me/following.hbs
+++ b/app/templates/me/following.hbs
@@ -5,7 +5,7 @@
 
 {{! TODO: reduce duplication with templates/me/crates.hbs }}
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
