--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
