--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -8,7 +8,7 @@
   </UserLink>
 </div>
 
-<div id='results'>
+<div local-class="results-meta">
   <ResultsCount
     @start={{this.currentPageStart}}
     @end={{this.currentPageEnd}}
