--- a/app/styles/categories.module.scss
+++ b/app/styles/categories.module.scss
@@ -1,5 +1,12 @@
 /* Styles for the /categories page */
 
+.results-meta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
 .sort-by-label {
     composes: small from './shared/typography.module.scss';
 }
