--- a/app/styles/crate/reverse-dependencies.module.scss
+++ b/app/styles/crate/reverse-dependencies.module.scss
@@ -2,6 +2,10 @@
     margin-bottom: 20px;
 }
 
+.results-meta {
+    margin-bottom: 25px;
+}
+
 .list {
     background-color: white;
     padding: 0 20px;
