--- a/app/styles/crates.module.scss
+++ b/app/styles/crates.module.scss
@@ -30,6 +30,13 @@
     }
 }
 
+.results-meta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
 .sort-by-label {
     composes: small from './shared/typography.module.scss';
 }
