--- a/app/styles/search.module.scss
+++ b/app/styles/search.module.scss
@@ -2,6 +2,13 @@
     margin: 0 15px;
 }
 
+.results-meta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
 .sort-by-label {
     composes: small from './shared/typography.module.scss';
 }
