--- a/app/styles/user.module.scss
+++ b/app/styles/user.module.scss
@@ -1,3 +1,10 @@
+.results-meta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
 .sort-by-label {
     composes: small from './shared/typography.module.scss';
 }
