--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -15,7 +15,7 @@
 {{#if this.firstResultPending}}
   <h2>Loading search results...</h2>
 {{else if this.hasItems}}
-  <div id='results'>
+  <div local-class="results-meta">
     <ResultsCount
       @start={{this.currentPageStart}}
       @end={{this.currentPageEnd}}
