Replace SASS variables with CSS variables
and fixed values in a few places... to be refactored later...

--- a/app/components/api-token-row.module.scss
+++ b/app/components/api-token-row.module.scss
@@ -10,7 +10,7 @@
 }
 
 .create-token {
-    background-color: $main-bg-dark;
+    background-color: var(--main-bg-dark);
 
     .name {
         padding-right: 20px;
