--- a/app/components/dropdown/menu.module.scss
+++ b/app/components/dropdown/menu.module.scss
@@ -3,7 +3,7 @@
     text-align: left;
     padding: 0;
     background: white;
-    border: 1px solid $gray-border;
+    border: 1px solid var(--gray-border);
     list-style: none;
     overflow: hidden;
     border-radius: 5px;
