--- a/app/components/front-page-list/item.module.scss
+++ b/app/components/front-page-list/item.module.scss
@@ -1,9 +1,9 @@
 .link {
     margin: 8px 0;
     width: 100%;
-    color: lighten($main-color, 10%);
+    color: #525252;
     text-decoration: none;
-    background-color: $main-bg-dark;
+    background-color: var(--main-bg-dark);
     font-size: 90%;
     padding: 20px 10px;
     display: flex;
@@ -11,7 +11,7 @@
     align-items: center;
 
     &:hover {
-        background-color: darken($main-bg-dark, 5%);
+        background-color: #e4e1cc;
     }
 
     span {
