--- a/app/components/sort-dropdown.module.scss
+++ b/app/components/sort-dropdown.module.scss
@@ -1,5 +1,5 @@
 .trigger {
-    background-color: $main-bg-dark;
+    background-color: var(--main-bg-dark);
     font-size: 85%;
     padding: 10px;
     display: inline-block;
