--- a/app/styles/keywords.module.scss
+++ b/app/styles/keywords.module.scss
@@ -16,7 +16,7 @@
 }
 
 .row {
-    border-bottom: 2px solid $gray-border;
+    border-bottom: 2px solid var(--gray-border);
     padding: 20px 0;
 
     &:last-of-type {
