--- a/app/styles/category/index.module.scss
+++ b/app/styles/category/index.module.scss
@@ -14,7 +14,7 @@
 }
 
 .subcategory {
-    border-bottom: 2px solid $gray-border;
+    border-bottom: 2px solid var(--gray-border);
     padding: 20px 0;
 
     &:last-of-type {
@@ -50,7 +50,7 @@
 
 .row {
     padding: 20px 0;
-    border-bottom: 2px solid $gray-border;
+    border-bottom: 2px solid var(--gray-border);
 
     &:last-of-type {
         border: none;
