--- a/app/styles/crate/reverse-dependencies.module.scss
+++ b/app/styles/crate/reverse-dependencies.module.scss
@@ -13,7 +13,7 @@
 }
 
 .row {
-    border-bottom: 2px solid $gray-border;
+    border-bottom: 2px solid var(--gray-border);
     padding: 20px 0;
     display: flex;
     justify-content: space-between;
@@ -26,7 +26,7 @@
 
 .stats {
     width: 25%;
-    color: $main-color-light;
+    color: var(--main-color-light);
 }
 
 .downloads {
