--- a/app/styles/crates.module.scss
+++ b/app/styles/crates.module.scss
@@ -13,8 +13,8 @@
         color: inherit;
         padding: 5px;
     }
-    a:hover { background-color: $main-bg-dark; }
-    a:global(.active) { background-color: $main-bg-dark; }
+    a:hover { background-color: var(--main-bg-dark); }
+    a:global(.active) { background-color: var(--main-bg-dark); }
 
     select {
         display: none;
@@ -48,7 +48,7 @@
 }
 
 .row {
-    border-bottom: 2px solid $gray-border;
+    border-bottom: 2px solid var(--gray-border);
     padding: 20px 0;
 
     &:last-of-type {
