--- a/app/styles/index.module.scss
+++ b/app/styles/index.module.scss
@@ -1,6 +1,6 @@
 .title-header {
     text-align: center;
-    border-bottom: 5px solid $gray-border;
+    border-bottom: 5px solid var(--gray-border);
     padding-bottom: 40px;
 
     h1 {
@@ -34,7 +34,7 @@
         display: flex;
         flex-direction: column;
 
-        border-left: 1px solid $gray-border;
+        border-left: 1px solid var(--gray-border);
         padding: 10px;
 
         span { margin-left: 10px; }
