--- a/app/styles/user.module.scss
+++ b/app/styles/user.module.scss
@@ -26,7 +26,7 @@
 
 .row {
     padding: 20px 0;
-    border-bottom: 2px solid $gray-border;
+    border-bottom: 2px solid var(--gray-border);
 
     &:last-of-type {
         border: none;
