--- a/app/components/email-input.module.css
+++ b/app/components/email-input.module.css
@@ -53,7 +53,7 @@
 .cancel-button,
 .edit-button,
 .resend-button {
-    composes: yellow-button small from '../styles/shared/buttons.module.scss';
+    composes: yellow-button small from '../styles/shared/buttons.module.css';
 }
 
 .save-button {
