--- a/app/components/results-count.module.css
+++ b/app/components/results-count.module.css
@@ -1,5 +1,5 @@
 .results-count {
-    composes: small from '../styles/shared/typography.module.scss';
+    composes: small from '../styles/shared/typography.module.css';
 }
 
 .highlight {
