--- a/app/styles/search.module.css
+++ b/app/styles/search.module.css
@@ -6,7 +6,7 @@
 }
 
 .sort-by-label {
-    composes: small from '../shared/typography.module.scss';
+    composes: small from './shared/typography.module.css';
 }
 
 .list {
@@ -17,9 +17,13 @@
 
 .row {
     padding: 20px 0;
-    border-bottom: 2px solid var(--gray-border);
+}
 
-    &:last-of-type {
-        border: none;
+.exact-match {
+    margin-bottom: 40px;
+    border-bottom: solid beige;
+
+    h1 {
+        color: green
     }
 }
