--- a/app/styles/categories.module.css
+++ b/app/styles/categories.module.css
@@ -8,7 +8,7 @@
 }
 
 .sort-by-label {
-    composes: small from './shared/typography.module.scss';
+    composes: small from './shared/typography.module.css';
 }
 
 .list {
@@ -26,11 +26,11 @@
 }
 
 .crate-count {
-    composes: small from './shared/typography.module.scss';
+    composes: small from './shared/typography.module.css';
 }
 
 .description {
-    composes: small from './shared/typography.module.scss';
+    composes: small from './shared/typography.module.css';
     margin-top: 4px;
     line-height: 1.2rem;
 }
