--- a/app/styles/team.module.css
+++ b/app/styles/team.module.css
@@ -34,7 +34,7 @@
 }
 
 .sort-by-label {
-    composes: small from './shared/typography.module.scss';
+    composes: small from './shared/typography.module.css';
 }
 
 .list {
