--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -12,7 +12,7 @@ html, body {
 }
 
 body {
-    // Use the modern font stack inspired by Bootstrap 4
+    /* Use the modern font stack inspired by Bootstrap 4 */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 16px;
     display: flex;
@@ -39,7 +39,7 @@ pre {
     background: $main-color;
     color: white;
     padding: 20px;
-    // Use the modern font stack inspired by Bootstrap 4
+    /* Use the modern font stack inspired by Bootstrap 4 */
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
