--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -6,7 +6,7 @@
   <div local-class="stats">
     <div local-class='downloads'>
       <img src="/assets/download.svg">
-      <span local-class='num'>{{format-num this.visibleStats.total_downloads}}</span>
+      <span local-class='num'>{{format-num this.myStats.total_downloads}}</span>
       <span local-class="stats-label">Total Downloads</span>
     </div>
   </div>
