BadgeMaintenance: Update link href

--- a/app/components/badge-maintenance.hbs
+++ b/app/components/badge-maintenance.hbs
@@ -1,6 +1,6 @@
 <span ...attributes>
   {{#unless this.none}}
-    <a href="https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata">
+    <a href="https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section">
       <img
           src="https://img.shields.io/badge/maintenance-{{this.escapedStatus}}-{{this.color}}.svg"
           alt="{{this.text}}"
