crate.version: Move docs.rs request into a controller task

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -23,8 +23,8 @@
     {{#if this.crate.mailing_list}}
       <li><a href="{{this.crate.mailing_list}}">Mailing list</a></li>
     {{/if}}
-    {{#if this.crate.documentation}}
-      <li><a href="{{this.crate.documentation}}">Documentation</a></li>
+    {{#if this.documentationLink}}
+      <li><a href="{{this.documentationLink}}">Documentation</a></li>
     {{/if}}
     {{#if this.crate.repository}}
       <li><a href="{{this.crate.repository}}">Repository</a></li>
