--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -66,7 +66,7 @@
         </span>
       {{else}}
         {{#if this.hasMore}}
-          <button type="button" local-class='load-more' {{ action 'loadMore' }}>
+          <button type="button" local-class='load-more' {{on "click" (perform this.loadMoreTask)}}>
             Load More
           </button>
         {{/if}}
