FlashMessage: Convert to template-only component

--- a/app/components/flash-message.hbs
+++ b/app/components/flash-message.hbs
@@ -1,3 +1,3 @@
-<p local-class="flash {{if this.message "shown"}}" data-test-flash-message ...attributes>
-  {{this.message}}
+<p local-class="flash {{if @message "shown"}}" data-test-flash-message ...attributes>
+  {{@message}}
 </p>
