--- a/app/components/page-header.hbs
+++ b/app/components/page-header.hbs
@@ -3,7 +3,7 @@
     {{yield}}
   {{else}}
     <h1 local-class="heading">
-      {{svg-jar this.icon local-class="icon"}}
+      {{svg-jar (or @icon "crate") local-class="icon"}}
       {{@title}}
       {{#if @suffix}}
         <small local-class="suffix">{{@suffix}}</small>
