FrontPageList::Item: Adjust `@subtitle` styling

--- a/app/components/front-page-list/item.hbs
+++ b/app/components/front-page-list/item.hbs
@@ -1,9 +1,9 @@
 <li>
   <LinkTo @route={{@route}} @model={{@model}} local-class="link" ...attributes>
-    <span>
-      {{@title}}
-      {{#if @subtitle}}({{@subtitle}}){{/if}}
-    </span>
-    {{svg-jar "right-arrow"}}
+    <div local-class="left">
+      <div local-class="title">{{@title}}</div>
+      {{#if @subtitle}}<div local-class="subtitle">({{@subtitle}})</div>{{/if}}
+    </div>
+    {{svg-jar "right-arrow" local-class="right"}}
   </LinkTo>
 </li>
