--- a/app/components/front-page-list/item.hbs
+++ b/app/components/front-page-list/item.hbs
@@ -2,7 +2,7 @@
   <LinkTo @route={{@route}} @model={{@model}} local-class="link" ...attributes>
     <div local-class="left">
       <div local-class="title">{{@title}}</div>
-      {{#if @subtitle}}<div local-class="subtitle">({{@subtitle}})</div>{{/if}}
+      {{#if @subtitle}}<div local-class="subtitle">{{@subtitle}}</div>{{/if}}
     </div>
     {{svg-jar "right-arrow" local-class="right"}}
   </LinkTo>
