--- a/app/components/keyword-list.hbs
+++ b/app/components/keyword-list.hbs
@@ -4,7 +4,7 @@
       @route="keyword"
       @model={{keyword}}
       @title={{keyword.id}}
-      @subtitle={{format-num keyword.crates_cnt}}
+      @subtitle="{{format-num keyword.crates_cnt}} crates"
     />
   {{/each}}
 </FrontPageList>
