FrontPageList::Item: Replace "arrow" image

--- a/app/components/front-page-list/item.hbs
+++ b/app/components/front-page-list/item.hbs
@@ -4,6 +4,6 @@
       <div local-class="title">{{@title}}</div>
       {{#if @subtitle}}<div local-class="subtitle">{{@subtitle}}</div>{{/if}}
     </div>
-    {{svg-jar "right-arrow" local-class="right"}}
+    {{svg-jar "chevron-right" local-class="right"}}
   </LinkTo>
 </li>
